--- a/Bootcamp Preraration/Lập trình đối tượng/Thực hành/TH-Xây dựng lớp Date/test.html
+++ b/Bootcamp Preraration/Lập trình đối tượng/Thực hành/TH-Xây dựng lớp Date/test.html
@@ -35,20 +35,34 @@
             this.setYear = function (year) {
                 this.year = year;
             }
+            this.toString = function () {
+                if (this.day < 10) {
+                    this.day = "0" + this.day;
+                }
+                if (this.month < 10) {
+                    this.month = "0" + this.month;
+                }
+                return this.day + "/" + this.month + "/" + this.year;
+            }
 
         };
-        let date = new MyDate(2, 2, 2007),
-            day = date.getDay(),
+        let date = new MyDate(2, 2, 2007);
+        date.toString();
+        let day = date.getDay(),
             month = date.getMonth(),
             year = date.getYear();
+
         alert(day + "/" + month + "/" + year);
         date.setDay(10);
         date.setMonth(10);
         date.setYear(2019);
+        date.toString();
         day = date.getDay();
         month = date.getMonth();
         year = date.getYear();
+
         alert(day + "/" + month + "/" + year);
+
 
     </script>
 </body>
